12/10/2004  version 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Updated to support slightly modified version of XMLDocumentListener

12/07/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Split the tree view to it's own source tree now that it's a plugin.